--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.3.1",
     "npm": "^6.4.1",
     "vue": "^2.5.2",
+    "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
