--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-regular-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "i": "^0.3.6",
     "jquery": "^3.3.1",
     "npm": "^6.4.1",
+    "scrollreveal": "^4.0.5",
     "vue": "^2.5.2",
     "vue-parallaxy": "^1.1.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-scroll-reveal": "^1.0.11"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
